# course_project_5

./: README.md  api_client.py  db_manager.py  main.py  pyproject.toml  reqirements.txt
